--- a/style.css
+++ b/style.css
@@ -1,25 +1,47 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 #container {
-    width: 1020px;
+    width: 90%;
     /* border: 1px solid grey; */
-    margin: 0px auto;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 #header {
-    height: 120px;
+    /* height: 120px; */
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0;
 }
 
 #brand {
-    float: left;
+    /* float: left; */
+    display: flex;
+    flex: 1;
+    min-width: 500px;
 }
 
 #searchBox {
-    float: right;
+    /* float: right; */
+    display: flex;
+    flex: 1;
     background: -webkit-linear-gradient(#E4F2B9, #B7E953);
     background: linear-gradient(#E4F2B9, #B7E953);
-    width: 400px;
-    height: 50px;
-    padding: 25px 25px 0px 25px;
-    margin: 25px 0px 0px 0px;
+    min-width: 400px;
+    justify-content: center;
+    align-items: center;
+    /* height: 50px; */
+    padding: 20px;
+    /* margin: 25px; */
 }
 
 .clear {
@@ -61,23 +83,23 @@ h1 a {
 }
 
 #menu {
+    display: flex;
+    flex-wrap: wrap;
     background: linear-gradient(rgba(180, 229, 236, 0.247), rgb(0, 191, 255));
-    height: 70px;
-    padding: 7px 0px;
+    /* height: 70px; */
+    padding: 20px 0px;
 }
 
-#menu ul {
-    list-style: none;
-}
 
-#menu ul li {
-    float: left;
+#menu a {
+    /* float: left; */
+
     border-right: 2px solid #5e01c9;
     height: 30px;
     padding: 0px 30px;
 }
 
-#menu ul li a {
+#menu a {
     text-decoration: none;
     /* padding:0px 10px 0px 10px; */
     font-size: 18px;
@@ -89,12 +111,9 @@ h1 a {
     transition: font-size 0.7s ease;
 }
 
-#menu ul li:last-child {
-    border-right: none;
-}
 
-#menu ul li a:hover,
-#menu ul li a.actived {
+#menu a:hover,
+#menu a.actived {
     font-size: 19px;
     letter-spacing: 2px;
     color: whitesmoke;
@@ -120,23 +139,30 @@ h1 a {
 
 }
 
+.sidebar {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sidebarWrapper {
+    flex: 50%;
+    padding: 10px;
+}
+
 #leftsidebar {
-    float: left;
-    width: 300px;
+    height: 100%;
     list-style-image: url(images/arrow.png);
 
 }
 
 #rightsidebar {
-    float: right;
-    width: 700px;
     list-style-image: url(images/tickResized.png);
 
 }
 
 .stylesidebar {
-    width: 500px;
-    height: 450px;
+    /* width: 500px; */
+    /* height: 450px; */
     border: 2px solid olive;
     border-radius: 20px;
 }
@@ -175,15 +201,33 @@ h1 a {
 }
 
 .footer {
+
+    margin-top: auto;
     height: 50px;
     background: linear-gradient(rgba(252, 198, 249, 0.669), rgb(243, 52, 230));
     padding: 10px;
-    margin-top: 15px;
 }
 
 .footer div p {
     text-align: center;
     color: rgb(123, 7, 69);
     font-weight: bold;
+
+}
+
+@media screen and (max-width:900px) {
+
+    #menu {
+        flex-direction: column;
+    }
+
+    #menu a {
+        align-items: center;
+        border: none;
+    }
+
+    .sidebarWrapper {
+        flex-direction: column;
+    }
 
 }
